# IBD

./: .gitignore  CMakeLists.txt  Main.cpp  Main.h  Pop.cpp  Pop.h  README.md  disperse.h  rnormal.h
src/: CMakeLists.txt  Main.cpp  Main.h  Pop.cpp  Pop.h  disk.cpp  disperse.cpp  disperse.h  rexp.h
